# url-shortener

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_url_id_sequence.py
app/: main.py
app/api/: router.py
app/api/routes/: health.py  redirects.py  urls.py
app/core/: base62.py  config.py  logging.py  url_validation.py
app/db/: redis.py  session.py
app/middleware/: request_logging.py
app/models/: analytics.py  url.py
app/repositories/: analytics_repository.py  url_repository.py
app/schemas/: url.py
app/services/: analytics_queue.py  analytics_service.py  cache_service.py  id_generator.py  url_service.py
app/workers/: analytics_worker.py
tests/: test_alias_validation.py  test_base62.py
