[project]
name = "url-shortener"
version = "0.1.0"
description = "Async FastAPI URL shortener"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "redis[hiredis]>=5.0.8",
    "loguru>=0.7.2",
    "python-multipart>=0.0.9",
    "orjson>=3.10.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
    "ruff>=0.5.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
